# Artificial_Intelligence_laboratory_work_3

./: README.md  pyproject.toml
src/: dfs.py  filling_algorithm.py  finding_long_way.py  word_search.py
