[tool.poetry]
name = "ai-lab-3"
version = "0.1.0"
description = "Лабораторная работа 3 ИИ"
authors = ["Andrey <pustakovandrej@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
line_length = 79
lines_after_imports = 2

[tool.flake8]
exclude = [
    ".git",
    ".idea",
    "doc",
    "tests",
    ".gitignore"
]
max-line-length = 120
ignore = ["E203", "F841"]

[tool.black]
line-length = 120
exclude = """
.idea/
tests/
doc/
"""
